[gd_scene load_steps=4 format=3 uid="uid://baopgtltkqhor"]

[ext_resource type="Texture2D" uid="uid://0vq8it0fr2dh" path="res://images/soldier1_gun.png" id="1_0q41a"]
[ext_resource type="Script" path="res://npc/npc.gd" id="1_cfnx0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l5ts6"]

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_cfnx0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_0q41a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_l5ts6")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
max_speed = 200.0
debug_enabled = true
debug_path_custom_color = Color(0.988235, 0.0784314, 1, 1)

[node name="PlayerDetect" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="PlayerDetect"]
rotation = -1.5708
target_position = Vector2(0, 400)
collide_with_areas = true

[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
